--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,7 @@ repositories {
 dependencies {
     compileOnly group: 'org.jboss.spec.javax.servlet', name: 'jboss-servlet-api_3.1_spec', version: '1.0.0.Final'
     compileOnly group: 'javax', name: 'javaee-api', version: '7.0'
+    compileOnly group: 'org.hibernate', name: 'hibernate-annotations', version: '3.5.6-Final'
     compile group: 'org.igniterealtime', name: 'rest-api-client', version: '1.1.3'
     compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
     compile group: 'com.maxmind.geoip2', name: 'geoip2', version: '2.12.0'
@@ -79,3 +80,14 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
+ext.genResourcesDir = "$buildDir/gen-resources"
+
+task writeGitHash {
+    ext.versionFile = file("$genResourcesDir/version.txt")
+    outputs.file(versionFile)
+    doLast {
+        versionFile.text = "git rev-parse --short HEAD".execute().text.trim()
+    }
+}
+
+sourceSets.main.output.dir genResourcesDir, builtBy: writeGitHash
